# embedded

air_quality_4.3/: platformio.ini
air_quality_4.3/include/: touch.h
air_quality_4.3/src/: debug.h  hardware.cpp  hardware.h  main.cpp  myAPI.cpp  myApi.h  myNTP.h  myWifi.cpp  myWifi.h
air_quality_4.3/src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_ScreenInfo.c  ui_ScreenMain.c  ui_ScreenNtpConf.c  ui_ScreenStart.c  ui_ScreenWifiConf.c  ui_comp_hook.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_1215880664.c  ui_img_1537150334.c  ui_img_357916539.c  ui_img_534919753.c  ui_img_schedule_png.c  ui_img_wifi_png.c
ui/: air_quality.sll  air_quality.spj  air_quality_events.py
